--- a/app/src/main/res/layout/outstanding_view_holder.xml
+++ b/app/src/main/res/layout/outstanding_view_holder.xml
@@ -63,6 +63,10 @@
             android:layout_height="wrap_content"
             android:id="@+id/outstandingOverDue"/>
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/outstandingContact"/>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
