--- a/app/src/main/res/layout/outstanding_view_holder.xml
+++ b/app/src/main/res/layout/outstanding_view_holder.xml
@@ -12,6 +12,7 @@
     android:layout_margin="2dp">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -63,10 +64,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/outstandingOverDue"/>
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/outstandingContact"/>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
